alterações na identidade visual e endereço

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
   </head>
   <div class="container">
   <body>
-    <img class="avatar" src="imagens/7977AFCF-A1D0-4273-A688-5C6936A527BB.png" alt="">
-    <h1>Thales Giubilei</h1>
-    <p>@drthales.giubilei</p>
+    <img class="avatar" src="imagens/thales.jpg" alt="">
+    <h1>Odontologia Testa Giubilei</h1>
+   
     <ul>
       <li>
      
-        <a href="https://www.facebook.com/profile.php?id=100004772987225" target="_blank">Facebook</a></li>
+        <a href="https://www.facebook.com/Giubilei.Odontologia" target="_blank">Facebook</a></li>
 
         <li><a href="https://wa.me/5516997118800" target="_blank">Whatsapp</a></li>
 
-      <li><a href="https://www.google.com.br/maps/place/Rua+AMAZONAS,+316,+Serrana+-+SP,+14150-000/@-21.2029939,-47.6051003,17z/data=!3m1!4b1!4m5!3m4!1s0x94b9daca711d3d79:0x69933576fa20123b!8m2!3d-21.2029989!4d-47.6029116"  target="_blank">Localização</a></li>
+      <li><a href="https://www.google.com.br/maps/place/R.+Bar%C3%A3o+do+Rio+Branco,+687,+Serrana+-+SP,+14150-000/@-21.2131298,-47.6020547,17z/data=!3m1!4b1!4m6!3m5!1s0x94b9daae3ee2603f:0x5b86670762996837!8m2!3d-21.2131348!4d-47.599866!16s%2Fg%2F11c0vpfr8g"  target="_blank">Localização</a></li>
 
     </ul>
     <FOOter>Feito por ALS.</FOOter>
